// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-EHOje cfzsAe"
>
  <div
    className="sc-bZQynM iirico"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-EHOje cfzsAe"
>
  <div
    className="sc-bZQynM iirico"
  >
    title
  </div>
  content
</header>
`;
